# Quake-2

./: .gitignore  CMakeLists.txt
client/: cl_input.c  cl_scrn.c  keys.c  menu.c  snd_mem.c
game/: CMakeLists.txt  g_local.h
qcommon/: qcommon.h
ref_gl/: CMakeLists.txt  gl_rmain.c
ref_soft/: CMakeLists.txt  r_alias.c  r_edge.c  r_local.h  r_main.c  r_scan.c  r_surf.c
server/: sv_world.c
win32/: cd_win.c  net_wins.c  q2.rc  rw_imp.c  sys_win.c  winquake.rc
